--- a/index.html
+++ b/index.html
@@ -315,11 +315,11 @@
         <span class="group-hover:opacity-90">Contact</span>
         <span class="absolute left-0 -bottom-1 w-0 h-0.5 bg-white transition-all duration-100 group-hover:w-full"></span>
       </a>
-      <a href="{{ url_for('leaderboard') }}" onclick="localStorage.setItem('oramaFromIndex', 'true')" class="relative group transition">
+      <a href="leaderboard.html" onclick="localStorage.setItem('oramaFromIndex', 'true')"  class="relative group transition">
         <span class="group-hover:opacity-90">Leaderboard</span>
         <span class="absolute left-0 -bottom-1 w-0 h-0.5 bg-white transition-all duration-100 group-hover:w-full"></span>
       </a>
-      <a href="{{ url_for('join_us') }}" onclick="localStorage.setItem('oramaFromIndex', 'true')" class="relative group transition">
+      <a href="join_us.html" onclick="localStorage.setItem('oramaFromIndex', 'true')"  class="relative group transition">
         <span class="group-hover:opacity-90">Join Us</span>
         <span class="absolute left-0 -bottom-1 w-0 h-0.5 bg-white transition-all duration-100 group-hover:w-full"></span>
       </a>
