--- a/index.html
+++ b/index.html
@@ -348,7 +348,7 @@
         muted
         playsinline
         loop>
-        <source src="intro.mp4" type="video/mp4">
+        <source src="img/intro.mp4" type="video/mp4">
       </video>
       
       <div class="video-overlay absolute inset-0"></div>
@@ -912,14 +912,14 @@ News Item
 
     <div 
       x-data="{
-        logos: [
-          '{{ url_for("static", filename="img/marines.png") }}',
-          '{{ url_for("static", filename="img/american_navy_1.png") }}',
-          '{{ url_for("static", filename="img/us_army.png") }}',
-          '{{ url_for("static", filename="img/ncpd_1.png") }}',
-          '{{ url_for("static", filename="img/nypd_1.png") }}',
-          '{{ url_for("static", filename="img/mtoa-logo.png") }}',
-           '{{ url_for("static", filename="img/sof-week-logo.webp") }}',
+         logos: [
+          'img/marines.png',
+'img/american_navy_1.png',
+'img/us_army.png',
+'img/ncpd_1.png',
+'img/nypd_1.png',
+'img/mtoa-logo.png',
+'img/sof-week-logo.webp'
         ],
         currentIndex: 0,
         visibleCount: 3,
