--- a/index.html
+++ b/index.html
@@ -367,7 +367,7 @@
           <h2 class="text-5xl md:text-6xl font-black text-white opacity-0"
               style="animation-delay: 1.5s; animation-fill-mode: forwards;"
               id="line3">
-            
+            MASTER THE FIGHT
           </h2>
           <h2 class="text-6xl md:text-7xl font-black text-[#d1181e] opacity-0 animate-glitch"
               style="animation-delay: 2s; animation-fill-mode: forwards;"
@@ -905,7 +905,7 @@ News Item
 
 
 
-<!-- SEEN IN SECTION -->
+<!-- 
 <section class="bg-white py-20 px-6 border-t border-gray-200">
   <div class="max-w-6xl mx-auto text-center">
     <h2 class="text-2xl md:text-3xl font-semibold mb-10">Where You Might Have Seen Us</h2>
@@ -974,7 +974,7 @@ News Item
     </div>
   </div>
 </section>
-
+-->
 
 
 
