--- a/index.html
+++ b/index.html
@@ -342,7 +342,7 @@
     <div class="relative w-full max-w-[400px] h-[90vh] max-h-[800px] rounded-[40px] overflow-hidden shadow-2xl">
       <video 
         id="transitionVideo"
-        src="src="img/intro.mp4"
+        src="img/intro.mp4"
         class="absolute inset-0 w-full h-full object-contain bg-black"
         autoplay
         muted
