--- a/index.html
+++ b/index.html
@@ -289,7 +289,8 @@
 
 
   <script defer src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js"></script>
-  <link rel="icon" type="image/png" a href="'img/logo.png">
+  <link rel="icon" type="image/png" href="img/logo.png" sizes="32x32">
+  <link rel="apple-touch-icon" href="img/logo.png">
 </head>
 
 
