--- a/join_us.html
+++ b/join_us.html
@@ -29,7 +29,9 @@
 </style>
 
 
-  <link rel="icon" type="image/png" a href="'img/logo.png">
+  <link rel="icon" type="image/png" href="img/logo.png" sizes="32x32">
+<link rel="apple-touch-icon" href="img/logo.png">
+
 </head>
 <body class="bg-white text-black font-sans">
 
