--- a/index.html
+++ b/index.html
@@ -429,8 +429,7 @@
           <span class="text-[#d1181e] font-semibold">make training more realistic, more adaptive, and more accessible</span> —because lives depend on it.
         </p>
         <p class="text-lg sm:text-xl md:text-2xl lg:text-3xl leading-relaxed text-black max-w-3xl mx-auto md:mx-0">
-          Founded by <span class="text-[#d1181e] font-semibold">combat veterans and backed by top defense partners</span>, Orama has been deployed across military, law enforcement, and allied organizations 
-          <span class="text-[#d1181e] font-semibold">to prepare operators for the fight ahead</span>, not the war behind.
+          At Orama<span class="text-[#d1181e] font-semibold">we build systems that prepare warfighters, law enforcement, and allied forces</span> for the realities of <span class="text-[#d1181e] font-semibold"> modern conflict </span> - not outdated scenarios from a different era.
         </p>
       </div>
 
@@ -763,7 +762,7 @@ document.addEventListener('DOMContentLoaded', function() {
     <div class="bg-white rounded-xl shadow-lg p-8 hover:shadow-2xl transition-shadow duration-500 animate-fadeIn">
       <h2 class="text-3xl font-bold mb-4 text-black">Our Story</h2>
       <p class="text-lg leading-relaxed text-gray-700">
-        Orama was founded by <span style="color: #d1181e; font-weight: 600;">veterans who saw the consequences of outdated training firsthand</span>. In
+        Orama was founded by a <span style="color: #d1181e; font-weight: 600;"> veteran who saw the consequences of outdated training firsthand</span>. In
 modern warfare, seconds and decisions matter—and yet we continue to train with 20th-century
 tools for 21st-century threats. <span style="color: #d1181e; font-weight: 600;"> We knew there had to be a better way. </span>
 What began as a prototype in a garage is now a system trusted by Tier 1 operators, tested with
@@ -779,7 +778,7 @@ we are changing the way America trains for war. </span>
 <span style="color: #d1181e; font-weight: 600;">To save lives by making warfighters more prepared, more capable, and more resilient </span> through
 immersive, intelligent training systems.
 To close the gap between doctrine and deployment.
-<span style="color: #d1181e; font-weight: 600;">To outpace our adversaries—one simulation at a time</span>.
+<span style="color: #d1181e; font-weight: 600;">To outpace our adversaries one simulation at a time</span>.
       </p>
     </div>
 
@@ -910,7 +909,7 @@ News Item
   
 -->
 
-
+<!--
 <section class="bg-white py-20 px-6 border-t border-gray-200">
   <div class="max-w-6xl mx-auto text-center">
     <h2 class="text-2xl md:text-3xl font-semibold mb-10">Where You Might Have Seen Us</h2>
@@ -948,14 +947,13 @@ News Item
       class="relative"
     >
 
-      <!-- Carousel Container -->
+
       <div class="flex justify-center items-center gap-12 transition-all duration-500 ease-in-out">
         <template x-for="logo in visibleLogos" :key="logo">
           <img :src="logo" alt="Logo" class="w-40 h-40 sm:w-36 sm:h-36 md:w-40 md:h-40 object-contain" />
         </template>
       </div>
 
-      <!-- Navigation Arrows -->
       <div class="absolute top-1/2 left-0 transform -translate-y-1/2">
         <button @click="prev(); stop()" class="p-2 bg-white border rounded-full shadow hover:bg-gray-100">&#8592;</button>
       </div>
@@ -963,7 +961,6 @@ News Item
         <button @click="next(); stop()" class="p-2 bg-white border rounded-full shadow hover:bg-gray-100">&#8594;</button>
       </div>
 
-      <!-- Dot Pagination -->
       <div class="mt-6 flex justify-center gap-2">
         <template x-for="(logo, index) in logos">
           <span 
@@ -979,7 +976,7 @@ News Item
     </div>
   </div>
 </section>
-
+-->
 
 <section id="contact" class="bg-white py-32 px-6 border-t border-gray-200">
   <div class="max-w-6xl mx-auto grid grid-cols-1 md:grid-cols-2 gap-12 items-start">
