--- a/index.html
+++ b/index.html
@@ -429,7 +429,7 @@
           <span class="text-[#d1181e] font-semibold">make training more realistic, more adaptive, and more accessible</span> —because lives depend on it.
         </p>
         <p class="text-lg sm:text-xl md:text-2xl lg:text-3xl leading-relaxed text-black max-w-3xl mx-auto md:mx-0">
-          At Orama<span class="text-[#d1181e] font-semibold">we build systems that prepare warfighters, law enforcement, and allied forces</span> for the realities of <span class="text-[#d1181e] font-semibold"> modern conflict </span> - not outdated scenarios from a different era.
+          At Orama<span class="text-[#d1181e] font-semibold"> we build systems that prepare warfighters, law enforcement, and allied forces</span> for the realities of <span class="text-[#d1181e] font-semibold"> modern conflict </span> - not outdated scenarios from a different era.
         </p>
       </div>
 
@@ -1039,11 +1039,11 @@ News Item
       <div class="space-y-8 text-center md:text-left">
         <div>
           <h4 class="font-semibold uppercase text-sm text-black tracking-widest">Office</h4>
-          <p class="mt-2 text-black">15 Somwhere Over the Rainbow<br/>00000 Someplace</p>
+          <p class="mt-2 text-black">The United States of America</p>
         </div>
         <div>
           <h4 class="font-semibold uppercase text-sm text-black tracking-widest">Contact</h4>
-          <p class="mt-2 text-black">(123) 456–7890<br/>hello@try.com</p>
+          <p class="mt-2 text-black">info@oramatech.ai</p>
         </div>
       </div>
 
@@ -1051,7 +1051,8 @@ News Item
       <div class="text-center md:text-left">
         <h4 class="font-semibold uppercase text-sm text-black tracking-widest">Social</h4>
         <p class="mt-2 text-black">
-          <a href="#" class="hover:underline">LinkedIn</a>
+          <a href="https://www.linkedin.com/company/oramaai" class="hover:underline">LinkedIn</a>
+          <a href="https://x.com/oramatechai" class="hover:underline">X</a>
         </p>
       </div>
     </div>
