--- a/index.html
+++ b/index.html
@@ -609,7 +609,7 @@ document.addEventListener('DOMContentLoaded', function() {
           <p>Our platform captures every round, decision, and movement, generating real-time After-Action Reviews (AARs) to improve readiness instantly.</p>
         </div>
         <div class="col-span-1 sm:col-span-2 pt-4">
-          <a href="{{ url_for('article') }}" onclick="localStorage.setItem('oramaFromIndex', 'true')" class="text-gray-600 hover:text-black transition font-medium inline-flex items-center gap-1">
+           <a href="article.html" onclick="localStorage.setItem('oramaFromIndex', 'true')" class="text-gray-600 hover:text-black transition font-medium inline-flex items-center gap-1">
             Learn More About Our Technology →
           </a>
         </div>
@@ -1032,24 +1032,24 @@ News Item
       
       <!-- Icon -->
       <div class="flex justify-center md:justify-start">
-        <img src="img/logo.png'" alt="Logo" class="w-32 h-auto" />
+        <img src="img/logo.png'" alt="Logo" class="w-32 h-auto">
       </div>
 
       <!-- Office & Contact -->
       <div class="space-y-8 text-center md:text-left">
         <div>
-          <h4 class="font-semibold uppercase text-sm text-black tracking-widest">Office</h4>
+          <h4 class="font-semibold uppercase text-sm text-black tracking-widest"><span class="text-[#d1181e] font-semibold">Office</h4></span>
           <p class="mt-2 text-black">The United States of America</p>
         </div>
         <div>
-          <h4 class="font-semibold uppercase text-sm text-black tracking-widest">Contact</h4>
+          <h4 class="font-semibold uppercase text-sm text-black tracking-widest"><span class="text-[#d1181e] font-semibold">Contact</h4></span>
           <p class="mt-2 text-black">info@oramatech.ai</p>
         </div>
       </div>
 
       <!-- Social -->
       <div class="text-center md:text-left">
-        <h4 class="font-semibold uppercase text-sm text-black tracking-widest">Social</h4>
+        <h4 class="font-semibold uppercase text-sm text-black tracking-widest"><span class="text-[#d1181e] font-semibold">Social</h4></span>
         <p class="mt-2 text-black">
           <a href="https://www.linkedin.com/company/oramaai" class="hover:underline">LinkedIn</a>
           <a href="https://x.com/oramatechai" class="hover:underline">X</a>
