--- a/index.html
+++ b/index.html
@@ -1032,7 +1032,7 @@ News Item
       
       <!-- Icon -->
       <div class="flex justify-center md:justify-start">
-        <img src="img/logo.png'" alt="Logo" class="w-32 h-auto">
+        <img src="img/logo.png" alt="Logo" class="w-32 h-auto">
       </div>
 
       <!-- Office & Contact -->
