--- a/index.html
+++ b/index.html
@@ -766,8 +766,7 @@ document.addEventListener('DOMContentLoaded', function() {
 modern warfare, seconds and decisions matter—and yet we continue to train with 20th-century
 tools for 21st-century threats. <span style="color: #d1181e; font-weight: 600;"> We knew there had to be a better way. </span>
 What began as a prototype in a garage is now a system trusted by Tier 1 operators, tested with
-the USAF, and showcased at national defense conferences. <span style="color: #d1181e; font-weight: 600;"> We are not just building a product—
-we are changing the way America trains for war. </span>
+the USAF, and showcased at national defense conferences. <span style="color: #d1181e; font-weight: 600;"> We are not just building a product - we are changing the way America trains for war.</span>
       </p>
     </div>
 
