--- a/index.html
+++ b/index.html
@@ -290,6 +290,12 @@
   from { opacity: 0; }
   to { opacity: 1; }
 }
+
+    #nav-links {
+  transition: max-height 0.3s ease;
+  overflow: hidden;
+}
+
   </style>
 
 
@@ -311,13 +317,17 @@
   </div>
 </div>
 
-<header id="main-header" class="fixed top-6 left-1/2 -translate-x-1/2 md:left-1/2 md:-translate-x-1/2 left-4 md:translate-x-0">
-  <div id="nav-container" class="bg-black text-white px-10 py-4 rounded-full shadow-xl flex items-center justify-between w-[90vw] max-w-4xl space-x-12 mx-auto">
+<header id="main-header" class="fixed top-6 left-1/2 -translate-x-1/2 z-50">
+  <div id="nav-container"
+       class="bg-black text-white px-6 py-4 rounded-full shadow-xl flex flex-col md:flex-row items-center justify-between w-[90vw] max-w-4xl mx-auto transition-all duration-300">
+    
+    <!-- Logo -->
     <a href="/" class="text-lg font-semibold tracking-wider transition-transform duration-200 hover:scale-105 hover:opacity-90">
       ORAMA
     </a>
-    <nav id="nav-links" 
-  class="hidden flex-col space-y-6 text-sm mt-6 md:flex md:flex-row md:space-y-0 md:space-x-6 transition-all duration-300 ease-in-out">
+
+    
+     <nav id="nav-links" class="hidden flex-col items-center space-y-6 mt-4 md:flex md:flex-row md:space-y-0 md:space-x-6 md:mt-0 text-sm transition-all duration-300 ease-in-out">
       <a href="#contact" class="relative group transition">
         <span class="group-hover:opacity-90">Contact</span>
         <span class="absolute left-0 -bottom-1 w-0 h-0.5 bg-white transition-all duration-100 group-hover:w-full"></span>
@@ -337,10 +347,11 @@
     </nav>
   </div>
 <button 
-  id="nav-toggle"
-  class="md:hidden fixed top-6 left-6 bg-black text-white w-14 h-14 rounded-full z-50 focus:outline-none shadow-xl transition-all duration-300">
-  <span class="text-2xl">☰</span>
-</button>
+    id="nav-toggle"
+    class="md:hidden fixed top-6 left-6 bg-black text-white w-14 h-14 rounded-full z-50 focus:outline-none shadow-xl transition-all duration-300">
+    <span class="text-2xl">☰</span>
+  </button>
+</header>
 
  <!-- Video Transition Screen -->
 <div id="videoTransition" class="fixed inset-0 z-40 bg-black opacity-0 pointer-events-none transition-all duration-1000">
