--- a/index.html
+++ b/index.html
@@ -317,9 +317,8 @@
   </div>
 </div>
 
-<header id="main-header" class="fixed top-6 left-1/2 -translate-x-1/2 z-50">
-  <div id="nav-container"
-       class="bg-black text-white px-6 py-4 rounded-full shadow-xl flex flex-col md:flex-row items-center justify-between w-[90vw] max-w-4xl mx-auto transition-all duration-300">
+<header id="main-header" class="fixed top-6 left-4 md:left-1/2 md:-translate-x-1/2 z-50 w-full px-4">
+<div id="nav-container" class="bg-black text-white px-6 py-4 rounded-full shadow-xl flex items-center justify-between max-w-6xl w-full mx-auto">
     
     <!-- Logo -->
     <a href="/" class="text-lg font-semibold tracking-wider transition-transform duration-200 hover:scale-105 hover:opacity-90">
@@ -474,7 +473,6 @@ document.addEventListener('DOMContentLoaded', function() {
     const mainWrapper = document.getElementById('mainWrapper');
     const header = document.getElementById('main-header');
     const navContainer = document.getElementById('nav-container');
-    const navLink = document.getElementById('nav-links')
     const toggleButton = document.getElementById('nav-toggle');
     const skipButton = document.getElementById('skipButton');
     
