--- a/index.html
+++ b/index.html
@@ -326,7 +326,7 @@
     </a>
 
     
-     <nav id="nav-links" class="hidden flex-col items-center space-y-6 mt-4 md:flex md:flex-row md:space-y-0 md:space-x-6 md:mt-0 text-sm transition-all duration-300 ease-in-out">
+    <nav id="nav-links" class="hidden flex-col items-center space-y-4 text-sm md:flex md:flex-row md:space-x-6 md:space-y-0 transition-all duration-300 ease-in-out">
       <a href="#contact" class="relative group transition">
         <span class="group-hover:opacity-90">Contact</span>
         <span class="absolute left-0 -bottom-1 w-0 h-0.5 bg-white transition-all duration-100 group-hover:w-full"></span>
@@ -345,9 +345,7 @@
       </a>
     </nav>
   </div>
-<button 
-    id="nav-toggle"
-    class="md:hidden fixed top-6 left-6 bg-black text-white w-14 h-14 rounded-full z-50 focus:outline-none shadow-xl transition-all duration-300">
+<button id="nav-toggle" class="fixed top-6 left-6 bg-black text-white w-14 h-14 rounded-full z-50 focus:outline-none shadow-xl transition-all duration-300">
     <span class="text-2xl">☰</span>
   </button>
 </header>
