--- a/index.html
+++ b/index.html
@@ -318,7 +318,9 @@
 </div>
 
 <header id="main-header" class="fixed top-6 left-4 md:left-1/2 md:-translate-x-1/2 z-50 w-full px-4">
-<div id="nav-container" class="bg-black text-white px-6 py-4 rounded-full shadow-xl flex items-center justify-between max-w-6xl w-full mx-auto">
+<div id="nav-container"
+  class="origin-top-left bg-black text-white px-6 py-4 rounded-full shadow-xl flex items-center justify-between max-w-6xl w-full mx-auto transition-all duration-700 ease-in-out">
+
     
     <!-- Logo -->
     <a href="/" class="text-lg font-semibold tracking-wider transition-transform duration-200 hover:scale-105 hover:opacity-90">
@@ -326,7 +328,9 @@
     </a>
 
     
-    <nav id="nav-links" class="hidden flex-col items-center space-y-4 text-sm md:flex md:flex-row md:space-x-6 md:space-y-0 transition-all duration-300 ease-in-out">
+   <nav id="nav-links"
+  class="hidden flex-col items-center space-y-4 text-sm md:flex md:flex-row md:space-x-6 md:space-y-0 transition-all duration-300 ease-in-out">
+
       <a href="#contact" class="relative group transition">
         <span class="group-hover:opacity-90">Contact</span>
         <span class="absolute left-0 -bottom-1 w-0 h-0.5 bg-white transition-all duration-100 group-hover:w-full"></span>
@@ -345,7 +349,7 @@
       </a>
     </nav>
   </div>
-<button id="nav-toggle" class="fixed top-6 left-6 bg-black text-white w-14 h-14 rounded-full z-50 focus:outline-none shadow-xl transition-all duration-300">
+<button id="nav-toggle" class="fixed top-6 left-6 bg-black text-white w-14 h-14 rounded-full z-50 focus:outline-none shadow-xl transition-all duration-300 md:hidden">
     <span class="text-2xl">☰</span>
   </button>
 </header>
@@ -828,7 +832,7 @@ To close the gap between doctrine and deployment.
   window.addEventListener('scroll', () => {
     // Always ensure transitions are smooth
     header.classList.add('transition-all', 'duration-700');
-    navContainer.classList.add('transition-all', 'duration-700');
+    navContainer.classList.add('transition-transform', 'transition-opacity', 'duration-700', 'ease-in-out');
     if (window.scrollY > 100 && isNavVisible) {
       navContainer.classList.add('scale-0', 'opacity-0', 'pointer-events-none');
       toggleButton.classList.remove('hidden');
