--- a/index.html
+++ b/index.html
@@ -317,42 +317,43 @@
   </div>
 </div>
 
-<header id="main-header" class="fixed top-6 left-4 md:left-1/2 md:-translate-x-1/2 z-50 w-full px-4">
-<div id="nav-container"
-  class="origin-top-left bg-black text-white px-6 py-4 rounded-full shadow-xl flex items-center justify-between max-w-6xl w-full mx-auto transition-all duration-700 ease-in-out">
-
-    
+<header id="main-header" class="fixed top-6 left-1/2 -translate-x-1/2 z-50 w-full max-w-6xl px-4 transition-all duration-300">
+  <div id="nav-container" class="bg-black text-white px-6 py-4 rounded-full shadow-xl flex items-center justify-between w-full transition-all duration-300">
     <!-- Logo -->
-    <a href="/" class="text-lg font-semibold tracking-wider transition-transform duration-200 hover:scale-105 hover:opacity-90">
+    <a href="/" class="text-lg font-semibold tracking-wider hover:scale-105 hover:opacity-90 transition-transform">
       ORAMA
     </a>
 
-    
-   <nav id="nav-links"
-  class="hidden flex-col items-center space-y-4 text-sm md:flex md:flex-row md:space-x-6 md:space-y-0 transition-all duration-300 ease-in-out">
-
-      <a href="#contact" class="relative group transition">
-        <span class="group-hover:opacity-90">Contact</span>
-        <span class="absolute left-0 -bottom-1 w-0 h-0.5 bg-white transition-all duration-100 group-hover:w-full"></span>
-      </a>
-      <a href="leaderboard.html" onclick="localStorage.setItem('oramaFromIndex', 'true')"  class="relative group transition">
-        <span class="group-hover:opacity-90">Leaderboard</span>
-        <span class="absolute left-0 -bottom-1 w-0 h-0.5 bg-white transition-all duration-100 group-hover:w-full"></span>
-      </a>
-      <a href="join_us.html" onclick="localStorage.setItem('oramaFromIndex', 'true')"  class="relative group transition">
-        <span class="group-hover:opacity-90">Join Us</span>
-        <span class="absolute left-0 -bottom-1 w-0 h-0.5 bg-white transition-all duration-100 group-hover:w-full"></span>
-      </a>
-      <a href="https://calendly.com/oramatech-info/30min" target="_blank" rel="noopener noreferrer"
-         class="border border-white text-white px-4 py-2 rounded-lg transition-all duration-200 hover:bg-white hover:text-black">
+    <!-- Desktop Nav -->
+    <nav id="nav-links" class="hidden md:flex space-x-6 text-sm">
+      <a href="#contact" class="hover:opacity-90">Contact</a>
+      <a href="leaderboard.html" onclick="localStorage.setItem('oramaFromIndex', 'true')" class="hover:opacity-90">Leaderboard</a>
+      <a href="join_us.html" onclick="localStorage.setItem('oramaFromIndex', 'true')" class="hover:opacity-90">Join Us</a>
+      <a href="https://calendly.com/oramatech-info/30min" target="_blank"
+         class="border border-white px-4 py-2 rounded-lg hover:bg-white hover:text-black transition">
         Book a Demo
       </a>
     </nav>
   </div>
-<button id="nav-toggle" class="fixed top-6 left-6 bg-black text-white w-14 h-14 rounded-full z-50 focus:outline-none shadow-xl transition-all duration-300 md:hidden">
-    <span class="text-2xl">☰</span>
+
+  <!-- Hamburger Button for ALL screens -->
+  <button id="nav-toggle"
+    class="fixed top-6 left-6 md:hidden bg-black text-white w-12 h-12 rounded-full shadow-xl z-[60] flex items-center justify-center">
+    ☰
   </button>
+
+  <!-- Mobile Menu -->
+  <div id="mobile-menu" class="md:hidden hidden flex-col items-center bg-black text-white mt-4 space-y-4 p-4 rounded-xl shadow-xl absolute top-20 left-6 right-6 z-50">
+    <a href="#contact">Contact</a>
+    <a href="leaderboard.html">Leaderboard</a>
+    <a href="join_us.html">Join Us</a>
+    <a href="https://calendly.com/oramatech-info/30min" target="_blank"
+       class="border border-white px-4 py-2 rounded-lg hover:bg-white hover:text-black transition">
+      Book a Demo
+    </a>
+  </div>
 </header>
+
 
  <!-- Video Transition Screen -->
 <div id="videoTransition" class="fixed inset-0 z-40 bg-black opacity-0 pointer-events-none transition-all duration-1000">
@@ -428,14 +429,50 @@
   </div>
 </div>
 
-  <script>
-  const toggleButton = document.getElementById('nav-toggle');
-  const navLinks = document.getElementById('nav-links');
+<script>
+  document.addEventListener('DOMContentLoaded', () => {
+    const header = document.getElementById('main-header');
+    const navContainer = document.getElementById('nav-container');
+    const toggleButton = document.getElementById('nav-toggle');
+    const mobileMenu = document.getElementById('mobile-menu');
 
-  toggleButton.addEventListener('click', () => {
-    navLinks.classList.toggle('hidden');
+    let isNavVisible = true;
+    let scrollTimeout;
+
+    // Scroll hides header but shows bubble
+    window.addEventListener('scroll', () => {
+      clearTimeout(scrollTimeout);
+      scrollTimeout = setTimeout(() => {
+        if (window.scrollY > 100 && isNavVisible) {
+          navContainer.classList.add('scale-0', 'opacity-0', 'pointer-events-none');
+          toggleButton.classList.remove('hidden');
+          isNavVisible = false;
+        } else if (window.scrollY <= 100 && !isNavVisible) {
+          navContainer.classList.remove('scale-0', 'opacity-0', 'pointer-events-none');
+          toggleButton.classList.add('hidden');
+          isNavVisible = true;
+        }
+      }, 50);
+    });
+
+    // Toggle (works for both desktop + mobile)
+    toggleButton.addEventListener('click', () => {
+      const isHidden = navContainer.classList.contains('scale-0');
+
+      // Desktop: bring back nav bar
+      if (window.innerWidth >= 768) {
+        if (isHidden) {
+          navContainer.classList.remove('scale-0', 'opacity-0', 'pointer-events-none');
+          isNavVisible = true;
+        }
+      } else {
+        // Mobile: toggle mobile menu
+        mobileMenu.classList.toggle('hidden');
+      }
+    });
   });
 </script>
+
 
 
 <div id="mainWrapper" class="opacity-0 pointer-events-none">
