--- a/index.html
+++ b/index.html
@@ -371,14 +371,14 @@
           </button>
         </div>
         
-        <!-- Mobile Menu -->
-        <nav id="mobile-menu" class="hidden border-t border-gray-700">
-          <div class="px-6 py-4 space-y-4">
-            <a href="#contact" class="block hover:opacity-90 transition-opacity">Contact</a>
-            <a href="leaderboard.html" class="block hover:opacity-90 transition-opacity">Leaderboard</a>
-            <a href="join_us.html" class="block hover:opacity-90 transition-opacity">Join Us</a>
+         <!-- Mobile Menu -->
+        <nav id="mobile-menu" class="hidden md:hidden absolute top-full left-0 right-0 bg-black rounded-b-3xl shadow-2xl">
+          <div class="px-6 py-8 space-y-6">
+            <a href="#contact" class="block text-lg hover:opacity-90 transition-opacity">Contact</a>
+            <a href="leaderboard.html" class="block text-lg hover:opacity-90 transition-opacity">Leaderboard</a>
+            <a href="join_us.html" class="block text-lg hover:opacity-90 transition-opacity">Join Us</a>
             <a href="https://calendly.com/oramatech-info/30min" target="_blank"
-               class="block border border-white px-4 py-2 rounded-lg hover:bg-white hover:text-black transition-all text-center">
+               class="block border border-white px-6 py-3 rounded-lg hover:bg-white hover:text-black transition-all text-center text-lg">
               Book a Demo
             </a>
           </div>
