--- a/index.html
+++ b/index.html
@@ -379,9 +379,9 @@
           </button>
         </div>
         
-        <!-- Mobile Menu -->
-        <nav id="mobile-menu" class="hidden md:hidden bg-black">
-          <div class="px-6 pb-8 pt-2 space-y-6 border-t border-gray-800">
+ <!-- Mobile Menu - Separate black box -->
+        <nav id="mobile-menu" class="hidden md:hidden absolute top-full left-0 right-0 bg-black shadow-2xl -mt-6 pt-6">
+          <div class="px-6 pb-8 space-y-6">
             <a href="#contact" class="block text-lg hover:opacity-90 transition-opacity">Contact</a>
             <a href="leaderboard.html" class="block text-lg hover:opacity-90 transition-opacity">Leaderboard</a>
             <a href="join_us.html" class="block text-lg hover:opacity-90 transition-opacity">Join Us</a>
