--- a/index.html
+++ b/index.html
@@ -450,7 +450,7 @@
           </h2>
         </div>
         
-        <div class="absolute bottom-10 left-0 right-0 px-8">
+        <div class="absolute bottom-15 left-0 right-0 px-8">
           <div class="text-white text-lg md:text-xl font-light tracking-wider opacity-0 inline-block"
                style="animation-delay: 3s; animation-fill-mode: forwards;"
                id="typewriterText">
@@ -461,7 +461,7 @@
         
         <button 
   id="skipButton"
-  class="absolute bottom-8 right-8 text-white/50 hover:text-white text-sm transition-all duration-300"
+  class="absolute bottom-4 right-8 text-white hover:text-white text-sm transition-all duration-300"
   style="animation: fadeInB 1s ease forwards; animation-delay: 3s;">
   Skip →
 </button>
