--- a/join_us.html
+++ b/join_us.html
@@ -35,6 +35,18 @@
 </head>
 <body class="bg-white text-black font-sans">
 
+  <!-- Back to Home Button - Left side version -->
+<a href="index.html" 
+   class="fixed bottom-8 left-8 w-14 h-14 bg-black rounded-full shadow-lg flex items-center justify-center hover:bg-gray-800 transition-all hover:scale-110 z-50">
+  <svg class="w-6 h-6 text-white" 
+       fill="none" 
+       stroke="currentColor" 
+       stroke-width="3" 
+       viewBox="0 0 24 24">
+    <path stroke-linecap="round" stroke-linejoin="round" d="M15 19l-7-7 7-7" />
+  </svg>
+</a>
+
     <!-- TRANSITION LOADER -->
 <div id="loader" class="fixed inset-0 z-50 bg-black flex flex-col items-center justify-center transition-opacity duration-[2000ms] hidden">
     <h1 class="text-white text-4xl font-bold tracking-widest mb-4">ORAMA</h1>
