--- a/leaderboard.html
+++ b/leaderboard.html
@@ -103,11 +103,14 @@
     </div>
   </div>
 
-  <div class="text-center mb-10">
-  <p id="current-date" class="text-sm text-gray-500"></p>
-  <h1 class="text-4xl font-bold mt-1 mb-2">LEADERBOARD</h1>
-  <p class="text-sm text-gray-600">The Best of The best</p>
-</div>
+ <main class="max-w-6xl mx-auto py-20 px-6">
+    <div class="text-center mb-10">
+      <p class="text-sm text-gray-500"></p>
+      <h1 class="text-4xl font-bold mt-1 mb-2">LEADERBOARD</h1>
+      <p class="text-sm text-gray-600">The Best of The best</p>
+    </div>
+
+   
 <script>
   document.addEventListener("DOMContentLoaded", function () {
     const dateElement = document.getElementById("current-date");
