--- a/join_us.html
+++ b/join_us.html
@@ -142,7 +142,7 @@
 
     <!-- First subheader -->
     <div class="mt-12">
-      <h2 class="font-semibold mb-2">Who We Are?</h2>
+      <h2 class="font-semibold mb-2">Who Are We?</h2>
       <p class="text-sm text-gray-700 leading-relaxed">
         Orama Technologies is pioneering the next generation of immersive simulation through the fusion of cutting-edge XR and AI technologies. Our mission is to create hyper-realistic simulation experiences that push the boundaries of human performance and readiness. By tackling complex challenges in hardware, software, and AI, we deliver high-fidelity platforms designed for real impact. We are builders, focused on delivering functional, cutting-edge technology rapidly.
       </p>
